# sparkit

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  scripts_benchmark_direct_openai.py  scripts_benchmark_hle_gold.py  scripts_benchmark_repeated_slices.py  scripts_build_paperqa_directory.py  scripts_build_science_corpus.py  scripts_capture_baselines.py  scripts_capture_direct_baselines.py  scripts_download_hle_gold.py  scripts_drift_check.py  scripts_enrich_hle_answers.py  scripts_example_federation.py  scripts_generate_hle_biochem_subset.py  scripts_generate_stem_exam_200.py  scripts_ingest_codex_evidence_pack.py  scripts_ingest_scholarly_metadata.py  scripts_reasoning_smoke.py  scripts_rephrase_then_answer_ab.py  scripts_run_claudep_proposals.sh  scripts_run_claudep_proposals_runner.sh  scripts_run_eval.py  scripts_update_hle_live_status.py
alembic/: env.py
benchmarks/: drift_thresholds.json
docs/: README.md  api-contracts.md  architecture.md  backlog.md  barometer.md  commit-audit.md  configuration.md  context.md  decisions.md  drift-policy.md  federated-science-rag-plan.md  hle-gold-live-status.md  hle-gold-triplicate-runbook.md  mvp-checklist.md  paperqa-audit.md  progress.md  reasoning-params-smoke.md  schemas.md  v2-freeze-baseline.md  v2-legacy-removal-plan.md  v2-roadmap.md
proposals/: proposal_001.error.json  proposal_001.raw.txt  proposal_002.error.json  proposal_002.raw.txt  proposal_003.error.json  proposal_003.raw.txt  proposal_004.error.json  proposal_004.raw.txt  proposal_005.error.json  proposal_005.raw.txt  proposal_006.error.json  (+89 more)
(+149 files in other folders)
